# designPattern

MVC/: CMakeLists.txt  README.md  UML.mmd  main.cpp
MVC/controller/: Callable.h  Controller.cpp  Controller.h
MVC/model/: Model.cpp  Model.h
MVC/view/: PieChartView.cpp  PieChartView.h  TableView.cpp  TableView.h  ViewInterface.h
